# SAT_exercise3

./: CMakeLists.txt  README.md  main.cpp  solver.cpp  solver.hpp
